[package]
name = "ipc-channel"
version = "0.21.0"
description = "A multiprocess drop-in replacement for Rust channels"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/ipc-channel"
edition = "2021"

[[bench]]
name = "platform"
harness = false

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "ipc_receiver_set"
harness = false

[[bench]]
name = "ipc_shared_mem"
harness = false

[features]
default = []
force-inprocess = []
async = ["dep:futures-core", "dep:futures-channel"]
win32-trace = []
enable-slow-tests = []

[dependencies]
bitcode = { version = "0.6.6", features = ["serde"] }
crossbeam-channel = "0.5"
fnv = "1.0.3"
futures-channel = { version = "0.3.31", optional = true }
futures-core = { version = "0.3.31", optional = true }
libc = "0.2.162"
serde = { version = "1.0", features = ["rc"] }
thiserror = "2.0.12"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(any(target_os = "linux", target_os = "openbsd", target_os = "freebsd", target_os = "illumos"))'.dependencies]
mio = { version = "1.0", default-features = false, features = ["os-ext"] }
tempfile = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.9"

[dev-dependencies]
crossbeam-utils = "0.8"
futures-test = "0.3"
static_assertions = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]
